<?xml version="1.0"?>
<package format="2">
  <name>sumobot_msgs</name>
  <version>0.0.1</version>
  <description>Contains the messages used by the other sumobot packages</description>

  <maintainer email="nrh16@ic.ac.uk">Nick Hafner</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Nickick-ICRS/sumobot-2019</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
